--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,6 @@
 <resources>
-
-    <!-- Base application theme -->
-    <style name="Theme.Sanitizr" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <!-- Base application theme without system Action Bar -->
+    <style name="Theme.Sanitizr" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
@@ -13,10 +12,9 @@
         <item name="colorOnSurface">@color/colorOnSurface</item>
         <item name="colorAccent">@color/colorAccent</item>
 
-        <!-- Customize your status bar, nav bar, etc -->
+        <!-- Customize status bar, nav bar, etc -->
         <item name="android:statusBarColor">@color/colorPrimaryVariant</item>
         <item name="android:navigationBarColor">@color/colorBackground</item>
     </style>
-
 </resources>
 
