--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout 
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootLayout"
@@ -30,59 +30,58 @@
         app:layout_constraintTop_toTopOf="@id/ivLogo"
         app:layout_constraintBottom_toBottomOf="@id/ivLogo"
         android:layout_marginStart="8dp"/>
-        
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvFiles"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="580dp"
+        android:background="@color/colorSurface"
         android:clipToPadding="false"
         android:paddingBottom="8dp"
-        android:background="@color/colorSurface"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintBottom_toTopOf="@id/buttonPanel"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
     <LinearLayout
         android:id="@+id/buttonPanel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:gravity="center"
+        android:orientation="horizontal"
         android:paddingTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/btnScan"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Scan Files"
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@color/colorOnPrimary"/>
+            android:text="Scan Files"
+            android:textColor="@color/colorOnPrimary" />
 
         <Button
             android:id="@+id/btnSanitize"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Sanitize Selected"
-            android:enabled="false"
             android:layout_marginStart="8dp"
+            android:layout_weight="1"
             android:backgroundTint="@color/colorPrimary"
-            android:textColor="@color/colorOnPrimary"/>
+            android:enabled="false"
+            android:text="Sanitize Selected"
+            android:textColor="@color/colorOnPrimary" />
     </LinearLayout>
 
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:visibility="gone"
+        android:layout_marginTop="8dp"
         android:indeterminateTint="@color/colorPrimary"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
+        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
-
